--- a/vue/lesson5.html
+++ b/vue/lesson5.html
@@ -10,9 +10,25 @@
 		1 想让vue工作 必须创建一个vue实例 且要传入一个配置对象
 		2 root容器里的代码依然符合html规范 只不过混入了一些特殊的语法
 		3 root容器里的代码被称为vue模板
+		4 vue容器和实例是一一对应的
+		5 真实开发中只有一个vue实例 并且会配合着组件一起使用
+		6 {{xxx}} 中的xxx要写js表达式 且xxx可以自动读取到data中的所有属性
+		7 一旦data中的数据发生改变，那么页面中用到该数据的地方也会自动更新
+		注意区分js表达式和js代码
+	    表达式的定义：一个表达式会生成一个值 可以放在任何一个需要值得地方
+		a
+		a+b
+		demo(1)
+		x == y ? a : b
+		
+		js语句
+		if
+		for
+		while
+		
 		-->
 		<div id = "root">
-			<h1>hello {{name}}</h1>
+			<h1>hello {{name.toUpperCase()}} {{Date.now()}} </h1>
 		</div>
 		
 		<script type="text/javascript">
@@ -22,7 +38,7 @@
 			{
 				el:'#root',  // el用于指定当前vue实例为那个容器服务 值通常为css选择器字符串
 				data:{  // data中用于存储数据 数据供el所指定的容器去使用 值我们暂时写成一个对象
-					name:"你好"
+					name:"abba"
 				}
 			})
 		</script>
