--- a/html+css/lesson40.html
+++ b/html+css/lesson40.html
@@ -3,8 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        /*
+        长度单位
+        像素
+         屏幕，也就是显示器实际上是由一个一个的小点点构成的
+         不同屏幕的像素大小是不同的，像素越小的屏幕显示的效果越清晰
+         所以同样的200px在不同的设备下显示效果不一样
+
+         百分比
+            也可以将属性值设置为相对于其父元素属性的百分比
+            设置百分比可以使得子元素跟随父元素的改变而改变
+        */
+        .box1{
+            width: 200px;
+            height: 200px;
+            background-color: orange;
+        }
+        .box2{
+            width: 50%;  /*相对父元素的50%*/
+            height: 50%;
+            background-color: aqua;
+        }
+    </style>
 </head>
 <body>
+<div class="box1">
+    <div class="box2">
 
+    </div>
+</div>
 </body>
 </html>
