--- a/html+css/lesson49.html
+++ b/html+css/lesson49.html
@@ -49,8 +49,15 @@
           margin-right
           如果某个值为auto 则会自动调整为auto的那个值使等式成立
 
-          如果将一个宽度和一个外边距设置为auto
+          - 如果将一个宽度和一个外边距设置为auto
           则宽度为调整到最大 设置为auto的外边距自动为0
+
+          - 如果将三个值都设置为auto 则外边距都是0 宽度最大
+          - 如果将两个外边距设置为auto 宽度固定值 则会将外边距设置为相同的值
+                   经常利用这个特点来使一个元素在其父元素中水平居中
+             如
+             width : px
+             margin:0 auto;
           */
       }
   </style>
